# rm_nn_vision

./: .gitignore
src/launch/: armor_detector_launch.py
src/launch/config/: camera_info.yaml  node_params.yaml
src/nn_auto_aim/armor_detector/: CMakeLists.txt
src/nn_auto_aim/armor_detector/include/armor_detector/: detector_node.hpp
src/nn_auto_aim/armor_detector/model/: mlp.onnx
src/nn_auto_aim/armor_detector/src/: detector_nn_node.cpp
src/nn_auto_aim/armor_detector/tasks/: classifier.cpp  detector.cpp  yolo.cpp
src/nn_auto_aim/armor_detector/tasks/yolos/: yolov8.cpp
src/nn_auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/nn_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/rm_buff/: README.md
src/rm_buff/buff_detector/: CMakeLists.txt
src/rm_buff/buff_detector/models/: best.xml  best_2.xml
src/rm_buff/buff_detector/src/: detector.cpp  detector_node.cpp
src/rm_buff/buff_detector/test/: test.py
src/rm_buff/buff_interfaces/: CMakeLists.txt  package.xml
src/rm_buff/buff_interfaces/msg/: DebugTheta.msg
src/rm_buff/buff_tracker/launch/: buff_tracker.launch.py
src/rm_buff/buff_tracker/src/: tracker.cpp  tracker_node.cpp
src/rm_buff/example/: buff_calculate.cpp
src/rm_decision_interfaces/: CMakeLists.txt  README.md  package.xml  publish_script.sh
src/rm_decision_interfaces/msg/: CvDecision.msg  RobotControl.msg
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/include/host-protocol/: protocol.h
src/rm_serial_driver/include/rm_serial_driver/: rm_serial_driver.hpp
src/rm_serial_driver/src/: rm_serial_driver.cpp
src/rm_vision_bringup/autostart/: start.sh
src/rm_vision_bringup/config/: launch_params.yaml  node_params.yaml
src/rm_vision_bringup/launch/: buff_bring_up.launch.py  common.py  no_hardware.launch.py  vision_bringup.launch.py
src/ros2_hik_camera/config/: camera_info.yaml
src/ros2_hik_camera/src/: hik_camera_node.cpp
(+7 files in other folders)
